# system_design

./: .clang-format  .gitignore  CMakeLists.txt
lld/: CMakeLists.txt
lld/design_patterns/: CMakeLists.txt
lld/design_patterns/abstract_factory_pattern/: CMakeLists.txt  abstract_factory.h  abstract_factory_pattern_test.cpp
lld/design_patterns/decorator_pattern/: CMakeLists.txt  decorator.h  decorator_pattern_test.cpp
lld/design_patterns/factory_pattern/: CMakeLists.txt  factory.h  factory_pattern_test.cpp
lld/design_patterns/observer_pattern/: CMakeLists.txt  observer_pattern_test.cpp  subject_observer.cpp  subject_observer.h
lld/design_patterns/strategy_pattern/: CMakeLists.txt  strategy.cpp  strategy.h  strategy_pattern_test.cpp
